--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@material-ui/core": "^4.12.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.11.1",
+    "react-native-web": "0.17.1",
+    "react-number-format": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
