--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-paper": "^4.11.1",
     "react-native-web": "0.17.1",
     "react-number-format": "^4.9.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-image-picker": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
