--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "email-validator": "^2.0.4",
     "expo": "~44.0.0",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
